--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "DecodeMTL <hello@decodemtl.com>",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "nodemon": "^1.9.2",
+    "request": "^2.72.0"
   }
 }
